--- a/samples/integration-testing/src/azure-pipeline.yaml
+++ b/samples/integration-testing/src/azure-pipeline.yaml
@@ -12,10 +12,10 @@ trigger:
 variables:
   # There must be an Azure Service Connection with that name defined in your Azure DevOps settings. See https://docs.microsoft.com/en-us/azure/devops/pipelines/library/connect-to-azure?view=azure-devops
   serviceConnection: 'terraform-basic-testing-azure-connection'
-  azureLocation: 'westeurope'
+  azureLocation: 'eastus'
   # Terraform settings
   terraformWorkingDirectory: '$(System.DefaultWorkingDirectory)/samples/integration-testing/src'
-  terraformVersion: '0.12.25'
+  terraformVersion: '1.8.3'
 
 stages:
   - stage: TerraformContinuousIntegration
